--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^5.2.0-beta1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
