--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.24",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
